crates/hpc-core/tests/compile-fail/api_inflight_write.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/api_inflight_write.rs
  |
  |     let _bad = q.enqueue_write(inflight, &[1u32; 16]);
  |                  ------------- ^^^^^^^^ expected `DeviceBuffer<'_, '_, u32, Empty>`, found `DeviceBuffer<'_, '_, u32, InFlight>`
  |                  |
  |                  arguments to this method are incorrect
  |
  = note: expected struct `DeviceBuffer<'_, '_, u32, hpc_core::buffer::state::Empty>`
             found struct `DeviceBuffer<'_, '_, u32, InFlight>`
note: method defined here
 --> src/api.rs
  |
  |     pub fn enqueue_write<T>(
  |            ^^^^^^^^^^^^^
